<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:textColor="@color/white"
    android:textColorHint="@color/gray">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:src="@drawable/logo_with_words"
        android:contentDescription="@string/logo"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameText"
        android:layout_marginTop="70dp"
        android:layout_above="@+id/passwordText"
        android:layout_alignRight="@+id/passwordText"
        android:layout_alignEnd="@+id/passwordText"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_alignStart="@+id/passwordText"
        android:hint="@string/username"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordText"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/passwordText"
        android:layout_alignRight="@+id/passwordText"
        android:layout_alignEnd="@+id/passwordText"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_alignStart="@+id/passwordText" />
</RelativeLayout>