<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/queueItemLayout">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vote_down"
        android:id="@+id/voteDownButton"
        android:layout_below="@+id/voteUpButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vote_up"
        android:id="@+id/voteUpButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/voteDownButton"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/videoPreviewImageView"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/video_preview"
        android:layout_alignBottom="@+id/voteDownButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/preview_placeholder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_preview"
        android:id="@+id/videoTitleTextView"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/voteUpButton"
        android:layout_toLeftOf="@id/videoPreviewImageView"
        android:layout_alignBottom="@+id/voteDownButton" />

</RelativeLayout>